yaml/istio/fault-injection/fault-injection-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shoppingportal-vs
  namespace: shoppingportal  
spec:
  gateways:
  - shoppingportal-gateway
  hosts:
   - "*"
  http:
  - match:
    - uri:
        prefix: /productreviewms
    route:
    - destination:
        host: productreviewservice.shoppingportal.svc.cluster.local
        port:
          number: 80
    fault: #This will put delay of 2 sec for every request to productreview service
        delay:
          percent: 100
          fixedDelay: 2s
